# app/models/shop_category_assignment.rb
@@ -1,0 +1,6 @@
+class ShopCategoryAssignment < ApplicationRecord
+  belongs_to :shop
+  belongs_to :shop_category
+
+  validates :shop_id, uniqueness: { scope: :shop_category_id }
+end 
